Finish header section.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
       <nav class="container">
-        <div>
+        <div class="logo">
           <img src="/Users/MTracy/Desktop/Projects/ts3/resources/images/logo-white.png" alt="Small white company logo">
           <span>Tortoiseshell Optics</span>
         </div>
@@ -21,9 +21,21 @@
             <li>Products</li>
             <li>Contact</li>
           </ul>
+          <ul class="truncated-menu">
+            <li>Menu</li>
+          </ul>
         </div>
       </nav>
+      <div class="flex container">
+        <div class="main-banner">
+          <h1>DON'T JUST LOOK, SEE.</h1>
+        </div>
+      </div>
     </header>
 
+    <!-- Supporting Section -->
+    <section>
+      
+    </section>
   </body>
 </html>
