Start supporting section.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Tortoiseshell Optics Inc.</title>
     <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
-    <link rel="shortcut icon" href="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-black.png">
+    <link rel="shortcut icon" href="/Users/MTracy/Desktop/Projects/ts3/resources/images/logo-black.png">
   </head>
   <body>
 
@@ -12,7 +12,7 @@
     <header>
       <nav class="container">
         <div class="logo">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-white.png" alt="Small white company logo">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-white.png" alt="Small white company logo.">
           <span>Tortoiseshell Optics</span>
         </div>
         <div class="menu">
@@ -34,8 +34,19 @@
     </header>
 
     <!-- Supporting Section -->
-    <section>
+    <section class="supporting container">
 
+      <!-- Services Section -->
+      <div class="service">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/paper-icon.png" alt="Small paper icon." class="paper-icon">
+        <div>Comprehensive Exams</div>
+      </div>
+      <div class="service">
+
+      </div>
+      <div class="service">
+
+      </div>
     </section>
   </body>
 </html>
