--- a/index.html
+++ b/index.html
@@ -42,11 +42,18 @@
         <div>Comprehensive Exams</div>
       </div>
       <div class="service">
-
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/ruler-icon.png" alt="Small ruler icon.">
+        <div>Custom Fittings</div>
       </div>
       <div class="service">
-
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/truck-icon.png" alt="Small truck icon.">
+        <div>Fast Delivery</div>
       </div>
+    </section>
+
+    <!-- Information Section -->
+    <section class="supporting container">
+
     </section>
   </body>
 </html>
