--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@
 
     <!-- Information Section -->
     <section class="supporting container">
-
+      <div class="info">
+        <div class="title">
+          <div>Philosophy</div>
+          <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+        </div>
+      </div>
+      <div class="info">
+        <div class="title">
+          <div>Appointments</div>
+          <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
