Start building footer section.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Tortoiseshell Optics Inc.</title>
     <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
-    <link rel="shortcut icon" href="/Users/MTracy/Desktop/Projects/ts3/resources/images/logo-black.png">
+    <link rel="shortcut icon" href="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-black.png">
   </head>
   <body>
 
@@ -66,5 +66,11 @@
         <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
       </div>
     </section>
+
+    <!-- Footer Section -->
+    <footer class="container">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-black.png" alt="Samll black company logo.">
+      <div>Copyright Tortoiseshell Optics</div>
+    </footer>
   </body>
 </html>
