Complete full width wireframe.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
 
     <!-- Footer Section -->
-    <footer class="container">
+    <footer class="bottom container">
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-black.png" alt="Samll black company logo.">
       <div>Copyright Tortoiseshell Optics</div>
     </footer>
