Begin responsive design on 575px.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <span>Tortoiseshell Optics</span>
         </div>
         <div class="menu">
-          <ul>
+          <ul class="main-menu">
             <li>Services</li>
             <li>Products</li>
             <li>Contact</li>
