--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/paper-icon.png" alt="Small paper icon." class="paper-icon">
         <div>Comprehensive Exams</div>
       </div>
-      <div class="service">
+      <div class="service ruler">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/ruler-icon.png" alt="Small ruler icon.">
         <div>Custom Fittings</div>
       </div>
-      <div class="service">
+      <div class="service truck">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/truck-icon.png" alt="Small truck icon.">
         <div>Fast Delivery</div>
       </div>
